# SoftwareRenderer

./: .gitignore  CMakeLists.txt  Doxyfile  README.md
SGL/: CMakeLists.txt  sgl.def  sgl.h
SGL/sgl/: command.c  command.h  common.h  image.c  image.h  instance.c  instance.h  math.h  pipeline.h  render.c  render.h  texture.c  texture.h  thread.h  vector.h
SGLExt/: CMakeLists.txt  sglext.h
SGLExt/sglext/: common.h  texture.c  texture.h
demos/: CMakeLists.txt
demos/demos/: LoadTexture.c  PBRScene.c  RenderTriangle.c
docs/html/: annotated.html  annotated_dup.js  classes.html  dir_06904d3e966cb5ef285925e2d9652c98.html  dir_06904d3e966cb5ef285925e2d9652c98.js  dir_826b1ce407f019614d44b084a60e6b29.html  dir_826b1ce407f019614d44b084a60e6b29.js  doxygen.css  files.html  files_dup.js  functions.html  functions_vars.html  group___render.html  group___render.js  group___s_g_l_math.html  group___s_g_l_math.js  group___s_g_l_tex2_d.html  group___s_g_l_tex2_d.js  index.html  math_8h_source.html  modules.html  modules.js  navtree.css  navtreedata.js  navtreeindex0.js  render_8h_source.html  struct_s_g_l_b_g_r24.html  struct_s_g_l_b_g_r32.html  struct_s_g_l_b_m_p_header.html  struct_s_g_l_shader.html  struct_s_g_l_shader.js  struct_s_g_l_tex2_d.html  tabs.css  texture_8h_source.html
docs/html/search/: all_0.js  all_1.js  all_3.js  all_4.js  all_5.js  classes_0.js  functions_0.js  groups_2.js  search.css  searchdata.js  typedefs_0.js  variables_2.js
docs/latex/: annotated.tex  files.tex  group___render.tex  group___s_g_l_math.tex  group___s_g_l_tex2_d.tex  math_8h_source.tex  modules.tex  refman.tex  render_8h_source.tex  struct_s_g_l_b_g_r24.tex  struct_s_g_l_b_g_r32.tex  struct_s_g_l_b_m_p_header.tex  struct_s_g_l_shader.tex  struct_s_g_l_tex2_d.tex  texture_8h_source.tex
tests/: CMakeLists.txt
tests/tests/: BenchmarkScene.c  TestVectors.c
